deployments/rimgo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rimgo-ingress
  namespace: rimgo
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
    external-dns.alpha.kubernetes.io/hostname: rimgo.thekitty.zone
    external-dns.alpha.kubernetes.io/ttl: "3600" #optional
    
spec:
  rules:
    - host: rimgo.thekitty.zone
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rimgo
                port:
                  number: 3000
  tls:
    - secretName: rimgo-tls
      hosts:
        - rimgo.thekitty.zone
